[package]
name = "exdump-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
serde = "1.0.152"
serde_json = { version = "1.0.93" }
surf = "2.3.2"
tokio = { version = "1.25.0", features = ["full"] }
